--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,3 +2,10 @@
   {{title}}
 </h1>
 <router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+      <button class="btn btn-primary">Test Button</button>
+    </div>
+  </div>
+</div>
