chartjs, some module, some pages, some components

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,16 @@
-<h1>
-  {{title}} <i class="fa fa-check"></i>
-</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <app-main-menu></app-main-menu>
+    </div>
+  </div>
+</div>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
