--- a/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.html
+++ b/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.html
@@ -1,4 +1,7 @@
 <h2>Listă consultanți</h2>
+<input type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search" />
+<hr>
+<pre>Model: {{ model | json }}</pre>
 
 <table class="table">
   <thead class="thead-default">
