mdBootstrap, almost google maps

--- a/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.html
+++ b/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.html
@@ -1,5 +1,5 @@
-<h2>Listă consultanți</h2>
-<input type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search" />
+<h2 class="page-title">Listă consultanți</h2>
+<input type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search"/>
 <hr>
 <pre>Model: {{ model | json }}</pre>
 
