--- a/frontend/src/app/components/main-menu/main-menu.component.html
+++ b/frontend/src/app/components/main-menu/main-menu.component.html
@@ -1,22 +1,24 @@
+<nav class="navbar navbar-toggleable-md navbar-dark red">
+  <div class="container">
+        <button class="navbar-toggler navbar-toggler-right" type="button"
+               aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation"
+        (click)="toggleMenu()">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Consultants Repository</a>
 
+        <div class="collapse navbar-collapse" [ngClass]="{show: menuVisible}" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
 
-<nav class="navbar navbar-toggleable-md bg-faded navbar-inverse bg-inverse">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Consultants Repository</a>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-
-      <li *ngFor="let menuItem of menuItems" class="nav-item" [routerLinkActive]="['active']">
-        <a class="nav-link" [routerLink]="menuItem.routerLink">{{menuItem.title}}</a>
-      </li>
-    </ul>
-    <!--<form class="form-inline my-2 my-lg-0">-->
-      <!--<input class="form-control mr-sm-2" type="text" placeholder="Search">-->
-      <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-    <!--</form>-->
+            <li *ngFor="let menuItem of menuItems" class="nav-item" [routerLinkActive]="['active']">
+              <a class="nav-link" [routerLink]="menuItem.routerLink" (click)="toggleMenu();">{{menuItem.title}}</a>
+            </li>
+          </ul>
+          <!--<form class="form-inline my-2 my-lg-0">-->
+          <!--<input class="form-control mr-sm-2" type="text" placeholder="Search">-->
+          <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+          <!--</form>-->
+        </div>
   </div>
 </nav>
-
