--- a/frontend/src/app/components/main-menu/main-menu.component.html
+++ b/frontend/src/app/components/main-menu/main-menu.component.html
@@ -6,7 +6,7 @@
         (click)="toggleMenu()">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Consultants Repository</a>
+        <a class="navbar-brand" [routerLink]="['/home']">Consultants Repository</a>
 
         <div class="collapse navbar-collapse" [ngClass]="{show: menuVisible}" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
