--- a/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.scss
+++ b/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.scss
@@ -21,3 +21,26 @@
   margin-top: 30px;
 }
 
+
+.specialization-input {
+  width: 200px;
+}
+
+.form-control {
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.right {
+  text-align: right;
+}
+
+.col-form-label {
+  padding-left: 15px;
+  font-size: 1.1em;
+}
+
+.btn-outline-primary {
+  border: 0;
+}
