--- a/frontend/src/app/modules/data/pages/constultants-map/constultants-map.component.html
+++ b/frontend/src/app/modules/data/pages/constultants-map/constultants-map.component.html
@@ -1,6 +1,8 @@
-<p>
-  constultants-map works!
-</p>
-<sebm-google-map [latitude]="lat" [longitude]="lng">
-  <sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>
-</sebm-google-map>
+<app-chart-1></app-chart-1>
+<div class="card map-card">
+  <div class="card-block map-container">
+    <sebm-google-map [latitude]="me.lat" [longitude]="me.lng" [zoom]="zoom" class="map">
+      <sebm-google-map-marker [latitude]="lat" [longitude]="lng" [label]="'M'" [draggable]="true" [title]="'12333'"></sebm-google-map-marker>
+    </sebm-google-map>
+  </div>
+</div>
