--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -2,20 +2,20 @@
 <div class="row first-row">
   <div class="col-md-6">
     <div class="card">
-      <!--<div class="view overlay hm-white-slight">-->
-      <!--<img src="https://mdbootstrap.com/images/reg/reg%20(2).jpg" class="img-fluid" alt="">-->
-      <!--<a>-->
-      <!--<div class="mask"></div>-->
-      <!--</a>-->
-      <!--</div>-->
+      <div class="view overlay hm-white-slight">
+      <img src="https://mdbootstrap.com/images/reg/reg%20(2).jpg" class="img-fluid" alt="">
+      <a>
+      <div class="mask"></div>
+      </a>
+      </div>
       <div class="card-block">
         <h4 class="card-title">Cauți un consultant?</h4>
         <p class="card-text">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
         </p>
         <div class="">
-          <a class="btn btn-primary pull-right" [routerLink]="['list']">
-            Găsește unul
+          <a class="btn btn-primary pull-right" [routerLink]="['/list']">
+            Caută unul
           </a>
         </div>
       </div>
@@ -23,21 +23,21 @@
   </div>
   <div class="col-md-6">
     <div class="card">
-      <!--<div class="view overlay hm-white-slight">-->
-      <!--<img src="https://mdbootstrap.com/images/reg/reg%20(2).jpg" class="img-fluid" alt="">-->
-      <!--<a>-->
-      <!--<div class="mask"></div>-->
-      <!--</a>-->
-      <!--</div>-->
+      <div class="view overlay hm-white-slight">
+      <img src="https://mdbootstrap.com/images/reg/reg%20(2).jpg" class="img-fluid" alt="">
+      <a>
+      <div class="mask"></div>
+      </a>
+      </div>
       <div class="card-block">
         <h4 class="card-title">Vrei să vezi ce consultanți ai în apropiere?</h4>
         <p class="card-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </p>
         <div class="">
-          <button class="btn btn-primary pull-right">
-            Arată-mi harta
-          </button>
+          <a class="btn btn-primary pull-right"  [routerLink]="['/map']">
+            Vezi pe hartă
+          </a>
         </div>
       </div>
     </div>
