--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+.alert.alert-info {
+  background-color: #33b5e5;
+  color: white;
+}
+.alert.alert-warning {
+  background-color: #F80;
+  color: white;
+}
