--- a/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.scss
+++ b/frontend/src/app/modules/data/pages/consultants-list/consultants-list.component.scss
@@ -44,3 +44,16 @@
 .btn-outline-primary {
   border: 0;
 }
+
+.buttons-container {
+  min-width: 200px;
+}
+
+@media screen and (max-width: 768px) {
+  .btn.btn-outline-primary.view {
+    padding: 10px;
+  }
+  .buttons-container {
+    min-width: 150px;
+  }
+}
