--- a/frontend/src/app/modules/data/components/consultants-details/consultant-details.component.html
+++ b/frontend/src/app/modules/data/components/consultants-details/consultant-details.component.html
@@ -54,7 +54,7 @@
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="toggleRatingGraph()">Vezi grafice recenzii</button>
     <button type="button" class="btn btn-secondary" (click)="openMap()">Vezi pe hartă</button>
-    <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Închide</button>
+    <button type="button" class="btn btn-danger" (click)="activeModal.close('Close click')">Închide</button>
   </div>
 
 </div>
