--- a/frontend/src/app/modules/data/components/consultant-map/consultant-map.component.html
+++ b/frontend/src/app/modules/data/components/consultant-map/consultant-map.component.html
@@ -39,7 +39,7 @@
 
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="toggleDirections()">Direcții de orientare</button>
-    <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Închide</button>
+    <button type="button" class="btn btn-danger" (click)="activeModal.close('Close click')">Închide</button>
   </div>
 
 </div>
