--- a/frontend/src/app/modules/data/pages/constultants-map/constultants-map.component.html
+++ b/frontend/src/app/modules/data/pages/constultants-map/constultants-map.component.html
@@ -1,14 +1,24 @@
-
 <div class="card map-card">
   <div class="card-block map-container">
     <sebm-google-map [latitude]="me.lat" [longitude]="me.lng" [zoom]="zoom" class="map">
-      <sebm-google-map-marker [latitude]="lat" [longitude]="lng" [label]="'M'" [draggable]="true" [title]="'12333'"></sebm-google-map-marker>
+      <sebm-google-map-marker
+        *ngIf="me"
+        [latitude]="me.lat"
+        [longitude]="me.lng"
+        [draggable]="true"
+        [title]="'tu'"
+        [zIndex]="1000"
+        [iconUrl]="'assets/map/marker-green-50.png'">
+      </sebm-google-map-marker>
 
       <sebm-google-map-marker
         *ngFor="let coord of coords"
         [label]="'C'"
         [latitude]="coord.lat"
-        [longitude]="coord.lng">
+        [longitude]="coord.lng"
+        [zIndex]="200"
+        (markerClick)="markerClicked(coord.consultant)"
+      >
       </sebm-google-map-marker>
     </sebm-google-map>
   </div>
